figured out flex grid issue, aligned the content how I want, will make adjustments after creating quiz

--- a/assets/css/quizStyle.css
+++ b/assets/css/quizStyle.css
@@ -13,19 +13,27 @@
     border-radius: 5rem;
 }
 .quizAnswersBlock{
+    display: flex;
+    justify-content: space-around;
     background-color: white;
     width: 50vw;
     height: 40vh;
     margin-bottom: 5vh;
     border-radius: 5rem;
+
 }
 .quizAnswers{
-   /* display: grid;
+   display: grid;
     grid-template-columns: repeat(2, 1fr);
     row-gap: 1rem;
     column-gap: 1rem;
     justify-content: space-around;
-    align-content: space-around; */
+    align-content: space-around;
+    /* display: flex;
+    align-content: flex-end;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 2rem; */
 }
 .quizAnswers li{
     background-color: royalblue;
